--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,14 @@
-html
-{
+
+body {
 	background: url( ../../images/nuweiba.jpg ) no-repeat center center fixed;
 	background-size: cover;
-	font-family: sans-serif;
+	font-family: "Helvetica Neue", sans-serif;
+	font-weight: 100;
 	text-align: center;
 	color: #fff;
 }
 
-canvas#spiders
-{
+canvas#spiders {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -18,7 +18,7 @@ canvas#spiders
 
 h1 {
 	font-size: 60px;
-	font-weight: 300;
+	font-weight: inherit;
 	margin-top: 50vh;
 	text-transform: uppercase;
 }
